--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -4965,7 +4965,7 @@ strong {
             @extend .font-regular;
             font-size: 14px;
             width: calc(100% - 20px);
-            height: 80px;
+            height: 65px;
 
             &.active,
             &:hover,
@@ -5282,43 +5282,50 @@ strong {
             width: 100%;
         }
 
-        > .ui-button.download, .ui-button.publish {
-            margin: 15px 0 15px 9px;
-            padding: 0;
-            width: 216px;
-            height: 34px;
-            line-height: 34px;
-            font-size: 12px;
-            text-transform: uppercase;
-            @extend .font-bold;
-            @extend .font-smooth;
+        > .ui-panel.buttons {
+            border-bottom: 1px solid $border-primary;
 
-            &:before {
-                @extend .font-icon;
-                font-size: 14px;
-                color: $text-secondary;
-                vertical-align: top;
-                padding-right: 10px;
-                padding-left: 60px;
-            }
+            > .content {
+                > .ui-button.download, .ui-button.publish {
+                    margin: 15px 0 15px 9px;
+                    padding: 0;
+                    width: 216px;
+                    height: 34px;
+                    line-height: 34px;
+                    font-size: 12px;
+                    text-transform: uppercase;
+                    @extend .font-bold;
+                    @extend .font-smooth;
 
-            &:not(.disabled):hover:before {
-                color: $text-active;
+                    &:before {
+                        @extend .font-icon;
+                        font-size: 14px;
+                        color: $text-secondary;
+                        vertical-align: top;
+                        padding-right: 10px;
+                        padding-left: 60px;
+                    }
+
+                    &:not(.disabled):hover:before {
+                        color: $text-active;
+                    }
+                }
+
+                > .ui-button.download {
+                    &:before {
+                        content: '\E245';
+                    }
+                }
+
+                .ui-button.publish {
+                    &:before {
+                        content: '\E226';
+                        padding-left: 70px;
+                    }
+                }
             }
         }
 
-        > .ui-button.download {
-            &:before {
-                content: '\E245';
-            }
-        }
-
-        .ui-button.publish {
-            &:before {
-                content: '\E226';
-                padding-left: 70px;
-            }
-        }
 
         > ul {
             margin: 0;
