Disable launch button if scene not loaded yet

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2478,7 +2478,7 @@ strong {
             position: relative;
             background-color: transparent;
 
-            &:hover {
+            &:not(.disabled):hover {
                 > .content > .ui-button {
                     color: $text-primary;
                     background-color: $text-active;
