Show input field for scene name when you click add new scene in the scene picker

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -4812,6 +4812,19 @@ strong {
                     background-color: $bcg-darkest;
                 }
             }
+
+            > .new-scene-label {
+                margin-left: 0;
+                margin-right: 0;
+                display: block;
+            }
+
+            > .ui-text-field {
+                display: block;
+                width: 100%;
+                line-height: 1;
+                margin: 0;
+            }
         }
     }
 }
