Fix non-square image appearance when publishing, Show publishing route errors

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -5009,7 +5009,7 @@ strong {
                         margin-right: 15px;
                         vertical-align: top;
 
-                        background-size: 100%;
+                        background-size: 100% 100%;
 
                         &.progress {
                             background-size: 40%;
