--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2980,7 +2980,6 @@ strong {
 }
 
 .ui-panel.picker-node {
-
     > .content {
         padding: 0 !important;
 
@@ -4137,6 +4136,34 @@ strong {
                     font-size: 18px;
                 }
             }
+        }
+    }
+}
+
+.picker-script-create.center {
+    > .content {
+        width: 288px;
+        height: auto;
+        left: calc(50% - 144px);
+        top: calc(50% - 32px);
+        padding: 16px;
+        transition: none;
+
+        > .text {
+            display: block;
+            margin-top: 0;
+        }
+        > .ui-text-field {
+            display: block;
+            width: calc(100% - 8px);
+        }
+        > .validate {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            margin: 0;
+            font-size: 12px;
+            color: #f30;
         }
     }
 }
