--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -665,6 +665,11 @@ strong {
                     margin-top: 0;
                 }
             }
+            > .ui-code {
+                line-height: normal;
+                margin: 16px -16px -16px;
+                min-width: 240px;
+            }
             > .reference {
                 display: inline-block;
                 height: 32px;
@@ -1467,6 +1472,222 @@ strong {
                 content: '\E212';
             }
         }
+        &.script {
+            > .content {
+                padding-top: 6px;
+
+                > .ui-text-field.add-script {
+                    position: relative;
+                    display: block;
+                    width: calc(100% - 2px);
+                    margin: 0 0 6px 0;
+
+                    &:hover,
+                    &:focus,
+                    &.focus,
+                    &.not-empty {
+                        &:before,
+                        &:after {
+                            content: '';
+                        }
+                    }
+                    &:before {
+                        content: '\E120';
+                        position: absolute;
+                        top: 0;
+                        left: 8px;
+                        @extend .font-icon;
+                        font-weight: bold;
+                        line-height: 24px;
+                    }
+                    &:after {
+                        content: 'Add Script';
+                        position: absolute;
+                        right: auto;
+                        left: 30px;
+                        top: 0;
+                        padding: 0;
+                        line-height: 24px;
+                        color: $text-secondary;
+                        @extend .font-bold;
+                        font-weight: bold;
+                        font-size: 12px;
+                        text-transform: uppercase;
+                    }
+                }
+                > .ui-list.scripts-autocomplete {
+                    position: absolute;
+                    top: 30px;
+                    left: 6px;
+                    right: 6px;
+                    width: auto;
+                    margin: 0;
+                    border-top: none;
+                    z-index: 1;
+                    background-color: $bcg-darkest;
+
+                    > .ui-list-item {
+                        color: $text-primary;
+                        border-color: $bcg-darker;
+
+                        &:hover,
+                        &.active {
+                            color: $text-active;
+                        }
+                        &.selected {
+                            background-color: transparent;
+                        }
+                    }
+                }
+                > .scripts {
+                    border: 1px solid $bcg-darker;
+
+                    > .content {
+                        > .ui-panel {
+                            border-bottom: 1px solid $bcg-darker;
+
+                            &:last-child {
+                                border-bottom: none;
+                            }
+                            > .ui-header {
+                                background-color: $bcg-dark;
+
+                                > .move-down, > .move-up, > .remove {
+                                    float: right;
+                                    width: 32px;
+                                    height: 32px;
+                                    line-height: 32px;
+                                    margin: 0;
+                                    padding: 0;
+                                    background-color: transparent;
+                                    border: none;
+                                    @extend .font-icon;
+                                    font-size: 14px;
+                                    text-align: center;
+
+                                    &:hover {
+                                        color: $text-active;
+                                        background-color: #20292b;
+                                    }
+                                }
+                                > .move-up:after {
+                                    content: '\E161';
+                                }
+                                > .move-down {
+                                    &:after {
+                                        content: '\E163';
+                                    }
+                                }
+                                > .remove {
+                                    &:hover {
+                                        color: #d34141;
+                                    }
+                                    &:after {
+                                        content: '\E124';
+                                        font-weight: 200;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        &.asset-script {
+            > .ui-header {
+                > .parse-script {
+                    background-color: transparent;
+                    border: none;
+                    line-height: 32px;
+                    float: right;
+                    margin: 0;
+
+                    &:before {
+                        float: left;
+                        content: '\E128';
+                        @extend .font-icon;
+                        font-size: 14px;
+                        padding-right: 8px;
+                        vertical-align: middle;
+                    }
+                    &:hover {
+                        color: $text-active;
+                        background-color: #20292b;
+                    }
+                    &.disabled:hover {
+                        color: $text-secondary;
+                        background-color: transparent;
+                    }
+                }
+            }
+            > .content {
+                .ui-panel.validation {
+                    overflow: hidden;
+                    background-color: $bcg-dark;
+
+                    > .content {
+                        padding: 8px 8px 4px;
+
+                        > .ui-label {
+                            display: block;
+                            color: #f30;
+                            font-size: 12px;
+                            margin: 0;
+                            line-height: normal;
+                        }
+                    }
+                }
+                > .ui-panel.scripts {
+                    border: 1px solid $bcg-darker;
+                    background-color: transparent;
+
+                    &.empty {
+                        border: none;
+                        > .content {
+                            > .ui-label {
+                                margin-top: 0;
+                                line-height: normal;
+                            }
+                        }
+                    }
+                    > .content {
+                        > .ui-panel.script {
+                            background-color: transparent;
+                            border-bottom: 1px solid $bcg-darker;
+
+                            &:last-child {
+                                border-bottom: none;
+                            }
+                            > .ui-header {
+                                background-color: $bcg-dark;
+                            }
+                            > .content {
+                                > .validation {
+                                    > .content {
+                                        padding-top: 0;
+                                    }
+                                }
+                                > .attr {
+                                    display: block;
+                                    font-size: 12px;
+
+                                    &:hover {
+                                        background-color: mix($bcg-dark, $bcg-primary, 50%);
+                                    }
+                                    > .content {
+                                        padding: 0 5px;
+
+                                        > .type {
+                                            float: right;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
         > .content {
             padding: 8px 6px;
 
@@ -1507,43 +1728,35 @@ strong {
                     text-align: center;
                 }
             }
-            > .ui-button.edit-script {
+            > .ui-button.large-with-icon {
                 display: block;
                 text-align: center;
 
                 &:before {
+                    content: '?';
+                    line-height: 23px;
+                    padding-right: 8px;
+                    @extend .font-icon;
+                    font-size: 16px;
+                    text-align: center;
+                    vertical-align: middle;
+                }
+                &.edit-script:before {
                     content: '\E130';
-                    padding-right: 8px;
-                    @extend .font-icon;
-                    font-size: 16px;
-                    text-align: center;
                 }
-            }
-            > .ui-button.download-asset {
-                display: block;
-                text-align: center;
-
-                &:before {
+                &.parse-script:before {
+                    content: '\E120';
+                }
+                &.download-asset:before {
                     content: '\E228';
-                    padding-right: 8px;
-                    @extend .font-icon;
-                    font-size: 16px;
-                    text-align: center;
                 }
-            }
-            > .ui-button.calculate-meta {
-                display: block;
-                text-align: center;
-
-                &.hidden {
-                    display: none;
-                }
-                &:before {
-                    content: '\E131';
-                    padding-right: 8px;
-                    @extend .font-icon;
-                    font-size: 16px;
-                    text-align: center;
+                &.calculate-meta {
+                    &.hidden {
+                        display: none;
+                    }
+                    &:before {
+                        content: '\E131';
+                    }
                 }
             }
             > .ui-button.override-material, .ui-button.loading-screen {
@@ -2288,6 +2501,16 @@ strong {
             }
             > .icon {
                 display: none;
+            }
+            &.scripts-collide {
+                > .icon {
+                    display: block;
+                    &:after {
+                        content: '!';
+                        font-size: 22px;
+                        font-weight: bold;
+                    }
+                }
             }
         }
         &.type-texture {
