--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1363,6 +1363,8 @@ strong {
         }
     }
     .ui-panel.component {
+        outline: none;
+
         > header {
             text-transform: uppercase;
         }
@@ -1472,6 +1474,17 @@ strong {
                 content: '\E212';
             }
         }
+        &.light {
+            .ui-button.shadowUpdate {
+                @extend .font-icon;
+                font-weight: bold;
+                text-align: center;
+                line-height: 24px;
+                width: 22px;
+                height: 22px;
+                padding: 0;
+            }
+        }
         &.script {
             > .content {
                 padding-top: 6px;
@@ -1543,15 +1556,70 @@ strong {
                     border: 1px solid $bcg-darker;
 
                     > .content {
+                        > .dragPlaceholder {
+                            margin-bottom: 1px;
+                            background-color: $bcg-dark;
+                            border: 4px solid $text-active;
+
+                            &:last-child {
+                                margin-bottom: 0;
+                            }
+                        }
                         > .ui-panel {
                             border-bottom: 1px solid $bcg-darker;
 
+                            &.dragged {
+                                opacity: 0.5;
+                            }
                             &:last-child {
                                 border-bottom: none;
                             }
                             > .ui-header {
                                 background-color: $bcg-dark;
+                                padding-left: 0;
 
+                                > .handle {
+                                    float: left;
+                                    width: 12px;
+                                    height: 24px;
+                                    margin: 4px 2px;
+                                    cursor: move;
+                                    @extend .noSelect;
+                                    $color: mix($text-darkest, $bcg-primary, 50%);
+                                    $size: 6px;
+                                    $radiusI: 20%;
+                                    $radiusO: 55%;
+
+                                    background: -webkit-radial-gradient($color $radiusI, transparent $radiusO);
+                                    background: -moz-radial-gradient($color $radiusI, transparent $radiusO);
+                                    background: radial-gradient($color $radiusI, transparent $radiusO);
+                                    -webkit-background-size: $size ($size+1px);
+                                    -moz-background-size: $size $size;
+                                    background-size: $size $size;
+
+                                    &:hover {
+                                        $color: $text-primary;
+                                        background: -webkit-radial-gradient($color $radiusI, transparent $radiusO);
+                                        background: -moz-radial-gradient($color $radiusI, transparent $radiusO);
+                                        background: radial-gradient($color $radiusI, transparent $radiusO);
+                                        -webkit-background-size: $size ($size+1px);
+                                        -moz-background-size: $size $size;
+                                        background-size: $size $size;
+                                    }
+                                }
+                                > .title {
+                                    padding: 0 8px;
+                                    @extend .noSelect;
+
+                                    &.link {
+                                        color: $text-active;
+                                        cursor: pointer;
+
+                                        &:hover {
+                                            text-decoration: underline;
+                                        }
+                                    }
+                                }
                                 > .remove {
                                     float: right;
                                     width: 32px;
@@ -1589,7 +1657,7 @@ strong {
                                     width: 32px;
                                     height: 32px;
                                     line-height: 34px;
-                                    margin: 0 0 0 -8px;
+                                    margin: 0 -8px 0 0;
                                     text-align: center;
                                     font-size: 22px;
                                     font-weight: bold;
@@ -1651,16 +1719,38 @@ strong {
                         }
                     }
                 }
+                > .ui-label.loading {
+                    display: block;
+                    line-height: 32px;
+                    margin: 0 0 3px 0;
+                    padding: 0 8px;
+                    font-size: 12px;
+                    @extend .font-bold;
+                    // font-weight: bold;
+                    color: $text-primary;
+                    background-color: $bcg-dark;
+                    border: 1px solid $bcg-darker;
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                    font-smoothing: antialiased;
+
+                    &.hidden {
+                        display: none;
+                    }
+                }
                 > .ui-panel.scripts {
                     border: 1px solid $bcg-darker;
                     background-color: transparent;
 
                     &.empty {
                         border: none;
+
                         > .content {
                             > .ui-label {
+                                display: block;
                                 margin-top: 0;
                                 line-height: normal;
+                                text-align: center;
                             }
                         }
                     }
@@ -1863,6 +1953,84 @@ strong {
                 }
             }
 
+            > .ui-panel.scripts-order {
+                border: 1px solid $bcg-darker;
+
+                > .content {
+                    > .dragPlaceholder {
+                        margin-bottom: 1px;
+                        background-color: $bcg-dark;
+                        border: 4px solid $text-active;
+
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+                    }
+                    > .asset {
+                        border-bottom: 1px solid $bcg-darker;
+
+                        &:last-child {
+                            border-bottom: none;
+                        }
+                        > .ui-header {
+                            padding-left: 0;
+                            background-color: $bcg-dark;
+                            cursor: pointer;
+
+                            &:hover {
+                                background-color: $bcg-darkest;
+
+                                > .title {
+                                    text-decoration: underline;
+                                }
+                            }
+                            > .title {
+                                padding: 0 8px;
+                                color: $text-active;
+                            }
+                            > .number {
+                                float: right;
+                                margin-right: 8px;
+                                color: $text-dark;
+
+                                &:before {
+                                    content: '#';
+                                }
+                            }
+                            > .handle {
+                                float: left;
+                                width: 12px;
+                                height: 24px;
+                                margin: 4px 2px;
+                                cursor: move;
+                                @extend .noSelect;
+                                $color: mix($text-darkest, $bcg-primary, 50%);
+                                $size: 6px;
+                                $radiusI: 20%;
+                                $radiusO: 55%;
+
+                                background: -webkit-radial-gradient($color $radiusI, transparent $radiusO);
+                                background: -moz-radial-gradient($color $radiusI, transparent $radiusO);
+                                background: radial-gradient($color $radiusI, transparent $radiusO);
+                                -webkit-background-size: $size ($size+1px);
+                                -moz-background-size: $size $size;
+                                background-size: $size $size;
+
+                                &:hover {
+                                    $color: $text-primary;
+                                    background: -webkit-radial-gradient($color $radiusI, transparent $radiusO);
+                                    background: -moz-radial-gradient($color $radiusI, transparent $radiusO);
+                                    background: radial-gradient($color $radiusI, transparent $radiusO);
+                                    -webkit-background-size: $size ($size+1px);
+                                    -moz-background-size: $size $size;
+                                    background-size: $size $size;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
             .ui-button.audio-play {
                 @extend .font-icon;
                 float: left;
@@ -1889,7 +2057,9 @@ strong {
                 margin: 11px 0 0 8px;
                 height: 4px;
             }
-
+            .ui-button.loading-order {
+                line-height: 20px;
+            }
             .ui-label.no-data {
                 line-height: 24px;
                 height: 24px;
