chat input field with X

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3186,9 +3186,6 @@ strong {
             > .typers {
                 display: none;
             }
-            > .number {
-                display: block;
-            }
         }
     }
     &.expanded {
@@ -3224,10 +3221,12 @@ strong {
             pointer-events: none;
 
             &.notify {
+                display: block;
                 color: $text-primary;
                 background-color: $text-active;
             }
             &.typing {
+                display: block;
                 color: $text-primary;
             }
         }
@@ -3316,6 +3315,7 @@ strong {
                 }
                 > .field {
                     color: $text-primary;
+                    width: calc(100% - 40px);
                 }
             }
             > .clear {
