--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2487,6 +2487,7 @@ strong {
 .ui-tree.hierarchy {
     .ui-tree-item {
         > .title {
+            position: relative;
             @extend .font-regular;
 
             &:hover > .icon:after {
@@ -2500,6 +2501,18 @@ strong {
                 text-align: center;
                 background-color: transparent;
                 color: $text-darkest;
+            }
+            > .users {
+                position: absolute;
+                top: 0;
+                right: 2px;
+
+                > span {
+                    display: inline-block;
+                    margin-right: 4px;
+                    width: 8px;
+                    height: 8px;
+                }
             }
         }
         &.container {
@@ -2977,6 +2990,18 @@ strong {
             color: $text-primary;
             background-color: rgba($bcg-darker, 0.8);
         }
+        > .users {
+            position: absolute;
+            top: 8px;
+            right: 8px;
+
+            > span {
+                float: right;
+                margin-left: 4px;
+                width: 8px;
+                height: 8px;
+            }
+        }
     }
 }
 
@@ -3173,12 +3198,26 @@ strong {
     }
     > .content {
         > a {
+            position: relative;
             display: block;
             margin-right: 4px;
             float: left;
+            background-color: $bcg-darkest;
 
             > img {
                 display: block;
+                width: 28px;
+                height: 28px;
+                margin: 2px;
+            }
+            &:after {
+                content: '\00a0';
+                position: absolute;
+                right: 2px;
+                bottom: 2px;
+                width: 6px;
+                height: 6px;
+                background: inherit;
             }
         }
     }
@@ -3220,6 +3259,19 @@ strong {
             text-overflow: ellipsis;
             overflow: hidden;
             @extend .font-regular;
+
+            > .single,
+            > .double,
+            > .multiple {
+                display: none;
+
+                &.active {
+                    display: block;
+                }
+                > .user {
+                    font-weight: bold;
+                }
+            }
         }
         > .number {
             display: none;
