--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3319,15 +3319,17 @@ strong {
                 }
                 > .message {
                     margin: 4px;
+                    padding-left: 18px;
                     line-height: 14px;
                     font-size: 12px;
 
                     &.multi {
-                        margin: 0 4px 0 22px;
+                        margin: 0 4px 0 4px;
                     }
                     > img {
                         vertical-align: text-bottom;
                         margin-right: 4px;
+                        margin-left: -18px;
                     }
                     > span {
                         vertical-align: text-top;
