physics edit mode

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1630,6 +1630,9 @@ strong {
                                     &.link {
                                         color: $text-active;
                                         cursor: pointer;
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+                                        max-width: calc(100% - 192px);
 
                                         &:hover {
                                             text-decoration: underline;
@@ -3045,7 +3048,7 @@ strong {
 .ui-select-field.viewport-camera {
     position: absolute;
     top: 2px;
-    right: 74px;
+    right: 109px;
     margin: 2px 0;
 
     height: 31px;
@@ -3103,7 +3106,8 @@ strong {
     background-color: transparent;
 
     > .content {
-        > .ui-button.expand {
+        > .ui-button.expand,
+        > .ui-button.options {
             float: right;
             width: 33px;
             height: 33px;
@@ -3124,6 +3128,39 @@ strong {
             &.icon.active {
                 color: $text-primary;
                 background-color: $text-active;
+            }
+        }
+
+        > .ui-panel.modes {
+            position: absolute;
+            top: 33px;
+            right: 69px;
+            width: 240px;
+            padding: 4px;
+            background-color: rgba($bcg-darker, .75);
+
+            > .content {
+                > .ui-panel.field {
+                    background-color: transparent;
+
+                    > .content {
+                        > .ui-checkbox {
+                            margin-top: 5px;
+                            background-color: $bcg-darkest;
+
+                            &.checked {
+                                background-color: $text-dark;
+                            }
+                        }
+                        > .ui-label {
+                            margin: 0 4px;
+                            line-height: 24px;
+                            font-size: 12px;
+                            @extend .noSelect;
+                            cursor: pointer;
+                        }
+                    }
+                }
             }
         }
 
