light cookie params, fix gizmo interaction mouse move out of viewport, fix gizmo scale with different camera fov

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2519,6 +2519,11 @@ strong {
                     height: 8px;
                 }
             }
+            &.disabled {
+                > .text {
+                    opacity: 0.4;
+                }
+            }
         }
         &.container {
             > .title > .icon:after {
