Hide options in download project popup if upgrade prompt is shown

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -6118,7 +6118,7 @@ strong {
             }
 
             .ui-panel {
-                &.info, &.scenes {
+                &.info, &.scenes, &.options {
                     display: none;
                 }
             }
