--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1481,6 +1481,9 @@ strong {
             &.screen > header > .title:before {
                 content: '\E141';
             }
+            &.element > header > .title:before {
+                content: '\E378';
+            }
         }
         &.light {
             .ui-button.shadowUpdate {
@@ -2518,6 +2521,9 @@ strong {
                 &.c-screen:before {
                     content: '\E141';
                 }
+                &.c-screen:before {
+                    content: '\E378';
+                }
                 &:hover > .icon:after {
                     color: $text-primary;
                 }
@@ -2616,6 +2622,9 @@ strong {
         }
         &.c-screen > .title > .icon:after {
             content: '\E141';
+        }
+        &.c-element > .title > .icon:after {
+            content: '\E378';
         }
         &.rename {
             > .title {
