prevent query be removed from editor url; avoid creating initial history state when not needed; thumbs=0 in editor, disables thumbnails rendering

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -392,6 +392,7 @@ strong {
                     font-size: 12px;
                     vertical-align: top;
                     background-color: transparent;
+                    z-index: 2;
 
                     > .value {
                         @extend .font-bold;
