refactoring: framework > app, designer > editor

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -145,7 +145,7 @@ strong {
                 background-color: $bcg-darker;
             }
 
-            &.designer-settings {
+            &.editor-settings {
                 position: absolute;
                 left: 0;
                 bottom: 0;
